--- a/backend/student-registration-portal/src/main/resources/application.properties
+++ b/backend/student-registration-portal/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 server.port=8181
 
-spring.datasource.url=jdbc:mysql://localhost:3306/student_registration_portal
+spring.datasource.url=jdbc:mysql://localhost:3306/student_registration_portal?useSSl=false&sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
+#spring.datasource.url=jdbc:mysql://localhost:3306/student_registration_portal
 spring.datasource.username=root
 spring.datasource.password=root
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
+
+spring.servlet.multipart.max-request-size=5MB
+spring.servlet.multipart.max-file-size=5MB
