--- a/backend/student-registration-portal/pom.xml
+++ b/backend/student-registration-portal/pom.xml
@@ -53,6 +53,10 @@
 			<artifactId>itextpdf</artifactId>
 			<version>5.5.13.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
