--- a/backend/student-registration-portal/src/main/resources/application.properties
+++ b/backend/student-registration-portal/src/main/resources/application.properties
@@ -1,12 +1,23 @@
 server.port=8181
 
-spring.datasource.url=jdbc:mysql://localhost:3306/student_registration_portal?useSSl=false&sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
-#spring.datasource.url=jdbc:mysql://localhost:3306/student_registration_portal
+#database configurations
+#spring.datasource.url=jdbc:mysql://localhost:3306/student_registration_portal?useSSl=false&sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
+spring.datasource.url=jdbc:mysql://localhost:3306/student_registration_portal
 spring.datasource.username=root
 spring.datasource.password=root
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type=TRACE
 
-spring.servlet.multipart.max-request-size=2MB
-spring.servlet.multipart.max-file-size=2MB
+#file configurations
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.file-size-threshold=0
+
+#to disable warnings(spring.jpa.open-in-view is enabled by default)
+spring.jpa.open-in-view=true
