--- a/backend/Onboarding-System/src/main/resources/application.properties
+++ b/backend/Onboarding-System/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.datasource.password=root
 
 #hibernate configuaration
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 
 #Logging the log into a file
